# stock_learning

./: .gitignore  README.md  main_akshare.py  main_cn_index.py  main_sina_batch_spot.py  main_yahoo.py  pyproject.toml  run_sina_spot_exe.py
scripts/: build_sina_spot_exe.ps1
stock_learning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stock_search/: __init__.py  main_akshare.py  main_alpaca.py  main_sina_batch_spot.py  main_us_sina.py  main_us_twelvedata.py
