[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-learning"
version = "0.1.0"
description = "调用股票相关信息 查询并且监听"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "akshare>=1.18.55",
    "pandas>=3.0.2",
    "pandas-ta>=0.4.71b0",
    "yfinance>=1.2.1",
    "requests>=2.28.0",
]

[project.optional-dependencies]
exe = ["pyinstaller>=6.6"]

[project.scripts]
sina-batch-spot = "stock_search.main_sina_batch_spot:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stock_search*"]
